# simcomp_macro

./: .gitignore  CMakeLists.txt  README.mkd  build.sh  test.sh  use.sh
doc/: specification_RUS.rtf
fixture/: expansion_expect.asm  expansion_in.asm  expansion_out.asm  label_expect.asm  label_in.asm  no_params_expect.asm  no_params_in.asm  no_params_out.asm  recursion_in_WONT_COMPILE.asm  sample_infile.asm  sample_needed_output.asm  sample_outfile.asm  simple_expect.asm  simple_in.asm  simple_out.asm
src/: Common.h  DeclarationFinder.cpp  DeclarationFinder.h  DefinitionTable.cpp  DefinitionTable.h  MacroDefinition.cpp  MacroDefinition.h  MacroExpander.cpp  MacroExpander.h  MacroProcessor.cpp  MacroProcessor.h  SourceCodeStream.cpp  SourceCodeStream.h  String.cpp  String.h  Syntax.cpp  Syntax.h  main.cpp
